# MinXL

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/MinXL/: MinXL.hpp
include/MinXL/Core/: Common.hpp  Exception.hpp  Types.hpp
include/MinXL/Core/Implementation/: Array.hpp  String.hpp  Variant.hpp
include/MinXL/Core/Interface/: Array.hpp  String.hpp  Variant.hpp
src/: Array.cpp  Array.hpp  COM.hpp  Common.hpp  Exception.hpp  String.cpp  String.hpp  Variant.cpp  Variant.hpp
